# compiler-mini-java

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  build.sh  lexer.l  main.cpp  parser.y  tool.sh
.github/workflows/: asan_build.yml
cmake/: BuildFlags.cmake  FindFlexBison.cmake
include/ast/: ast_node.hpp  class_declaration.hpp  expressions.hpp  goal.hpp  identifier.hpp  main_class.hpp  method_declaration.hpp  statements.hpp  types.hpp  var_declaration.hpp
include/symbol_table/: class_info.hpp  entity_info.hpp  method_info.hpp  symbol_table.hpp  var_info.hpp
include/visitors/: ast_printer.hpp  symbol_table_builder.hpp  visitor.hpp
samples/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp  parser.y
src/ast/: ast_node.cpp  class_declaration.cpp  expressions.cpp  goal.cpp  identifier.cpp  main_class.cpp  method_declaration.cpp  statements.cpp  types.cpp  var_declaration.cpp
src/parsing/: parser.y  scanner.l
src/symbol_table/: class_info.cpp  entity_info.cpp  method_info.cpp  symbol_table.cpp  var_info.cpp
src/visitors/: ast_printer.cpp  symbol_table_builder.cpp
